Initial discover frontend app

--- a/hs_discover/templates/hs_discover/search.html
+++ b/hs_discover/templates/hs_discover/search.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </script>
-
+            <script type="text/javascript" src="{{ STATIC_URL }}js/resourceListing.js"></script>
             <script type="text/javascript" src="{{ STATIC_URL }}js/search.js"></script>
         </div>
     </div>
