Remove search for devops demo

--- a/hs_discover/templates/hs_discover/search.html
+++ b/hs_discover/templates/hs_discover/search.html
@@ -1,14 +1,1 @@
-{% extends "base.html" %}
-{% load pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
-{% block meta_title %}Discover{% endblock %}
-{% block main %}
-    <input type="hidden" id="static-url" value="{{ STATIC_URL }}">
-    <div class="container" id="discover-main">
-        <div class="row">
-            <div class="col-xs-12">
-                <h2 class="page-title">Discover</h2>
-                <div id="app"></div>
-            </div>
-        </div>
-    </div>
-{% endblock %}
+<head><link href=/css/app.50167829.css rel=preload as=style><link href=/css/chunk-vendors.51e9cc56.css rel=preload as=style><link href=/js/app.1ecf220e.js rel=preload as=script><link href=/js/chunk-vendors.f14aa2b9.js rel=preload as=script><link href=/css/chunk-vendors.51e9cc56.css rel=stylesheet><link href=/css/app.50167829.css rel=stylesheet></head>{% extends "base.html" %} {% load pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %} {% block meta_title %}Sample{% endblock %} {% block main %} <input type=hidden id=static-url value="{{ STATIC_URL }}"><div class=container id=discover-main><div class=row><div class=col-xs-12><h2 class=page-title>Sample</h2><div id=app></div></div></div></div>{% endblock %}<script src=/js/chunk-vendors.f14aa2b9.js></script><script src=/js/app.1ecf220e.js></script>
