--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,7 +3,7 @@
 {% load pages_tags mezzanine_tags i18n staticfiles theme_tags hydroshare_tags %}
 {% get_site_conf as siteconf %}
 <head>
-{% if settings.DEBUG == True %}<meta name="robots" content="noindex">{% endif %}
+{% if page|is_debug %}<meta name="robots" content="noindex">{% endif %}
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width">
 <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
@@ -69,12 +69,12 @@
 <![endif]-->
 
 {% block extra_head %}{% endblock %}
-
+{% if not page|is_debug %}
 <script type="text/javascript">
     window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
       heap.load("1320547260");
 </script>
-
+{% endif %}
 </head>
 
 <body id="{% block body_id %}body{% endblock %}">
