add notes to collectable test and fix sharing checkbox logic

--- a/theme/templates/resource-landing-page/manage-access.html
+++ b/theme/templates/resource-landing-page/manage-access.html
@@ -198,7 +198,7 @@
                                     <div class="checkbox">
                                         <label>
                                             <input type="checkbox" v-model="resAccess.isShareable" :disabled="isProcessingShareable"
-                                                   @change="setShareable(resAccess.isShareable ? 'make_not_shareable' : 'make_shareable')">
+                                                   @change="setShareable(resAccess.isShareable ? 'make_shareable' : 'make_not_shareable')">
                                             Shareable
                                         </label>
                                     </div>
