--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -598,17 +598,18 @@
                                                 </a>
                                             {% endif %}
 
-                                            <a id="btn-download-all" type="button"
-                                               title="Download all content as Zipped BagIt Archive"
-                                                    {% if cm.raccess.require_download_agreement %}
-                                               data-target="#license-agree-dialog-bag" data-toggle="modal"
-                                               data-placement="auto"
-                                               {% else %}href="{{ cm.bag_url }}"{% endif %}>
+                                            <button id="btn-download-all"
+                                                title="Download all content as Zipped BagIt Archive"
+                                                {% if cm.raccess.require_download_agreement %}
+                                                data-target="#license-agree-dialog-bag" data-toggle="modal"
+                                                data-placement="auto"
+                                                {% else %}
+                                                data-bag-url="{{ cm.bag_url }}"
+                                                {% endif %}>
                                                 <span class="fa fa-briefcase icon-blue"></span>
-                                            </a>
+                                            </button>
                                             <a class="small" target="_blank"
                                                href="https://en.wikipedia.org/wiki/BagIt">Learn more</a>
-
                                         </div>
                                     </div>
                                 </div>
