--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -816,6 +816,11 @@ li.account p{
 	font-size: 20px;
 }
 
+li.notifications .task {
+	display: flex;
+	justify-content: space-between;
+}
+
 .display-none {
     display: none !important;
 }
@@ -1704,7 +1709,7 @@ body > .main-container {
 	color: #428bca;
 }
 
-#fb-file-operations-controls #btn-download-all, #fb-file-operations-controls #rep-res-bag {
+#fb-file-operations-controls #rep-res-bag {
 	text-decoration: none;
 	padding: 0 6px;
 	display: inline-block;
@@ -4604,7 +4609,6 @@ div#fb-inner-controls button, .file-browser-search {
 }
 
 #fb-file-operations-controls > button,
-#fb-file-operations-controls #btn-download-all,
 #fb-file-operations-controls #rep-res-bag {
 	filter: progid:DXImageTransform.Microsoft.Gradient(enabled='false');
 	-webkit-box-shadow: none;
@@ -4620,7 +4624,6 @@ div#fb-inner-controls button, .file-browser-search {
 }
 
 #fb-file-operations-controls > button,
-#fb-file-operations-controls #btn-download-all,
 #fb-file-operations-controls #rep-res-bag {
 	margin-top: 8px;
 	text-shadow: 0 1px 0 #fff;
@@ -4636,7 +4639,6 @@ span.caption-file-type {
 }
 
 #fb-file-operations-controls > button:not(.disabled):hover,
-#fb-file-operations-controls #btn-download-all:hover,
 #fb-file-operations-controls #rep-res-bag:hover {
 	border: 1px solid #DDD;
 	box-shadow: 1px 1px 3px #e2e2e2;
