--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1664,8 +1664,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <a type="button" class="btn btn-success" id="download-bag-btn"
-                   href="{{ cm.bag_url }}" disabled>Download</a>
+                <button type="button" class="btn btn-success" id="download-bag-btn"
+                   data-bag-url="{{ cm.bag_url }}" disabled>Download</button>
             </div>
         </div>
     </div>
