--- a/theme/templates/pages/dashboard.html
+++ b/theme/templates/pages/dashboard.html
@@ -115,7 +115,7 @@ timestamp should go with a template tags to convert to a human readble day.
                 {% trans "http://matlab.cuahsi.org/" as title_url %}
                 {% trans "Matlab_Logo.png" as app_image %}
                 {% trans "MATLAB Online App" as app_image_alt %}
-                {% trans "MATLAB Online provides access to MATLAB from any standard web browser wherever you have internet access." as app_content %}
+                {% trans "This app provides access to MATLAB from any standard web browser wherever you have internet access." as app_content %}
                 {% include "includes/big_image_button_app.html" %}
             </div>
 
