--- a/theme/templates/newbase.html
+++ b/theme/templates/newbase.html
@@ -13,11 +13,6 @@
         {% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
     <link rel="shortcut icon" href="{% static "img/favicon.png" %}">
 
-{#    {% ifinstalled mezzanine.blog %}#}
-{#        <link rel="alternate" type="application/rss+xml" title="RSS" href="{% url "blog_post_feed" "rss" %}">#}
-{#        <link rel="alternate" type="application/atom+xml" title="Atom" href="{% url "blog_post_feed" "atom" %}">#}
-{#    {% endifinstalled %}#}
-
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static "css/hydroshare_fonts.css" %}" rel="stylesheet"/>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
@@ -48,15 +43,12 @@
                 position: absolute;
             }
             #resource-dropdown {
-                display: block;
-                position: relative;
-                float: left;
+                position: absolute;
             }
-            #resource-dropdown .open{
-                display: block;
-                position: relative;
-                float: left;
+            #res-dropdown {
+                position: absolute;
             }
+
         </style>
         {% block extra_css %}{% endblock %}
     {% endcompress %}
