Add cursor wait

--- a/theme/templates/newbase.html
+++ b/theme/templates/newbase.html
@@ -43,10 +43,7 @@
                 position: absolute;
             }
             #resource-dropdown {
-                position: absolute;
-            }
-            #res-dropdown {
-                position: absolute;
+                position: relative;
             }
 
         </style>
